;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;  This file is part of the Codex semantics library.                     ;;
;;                                                                        ;;
;;  Copyright (C) 2013-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE).                      ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(library
 (public_name "codex.extstdlib")
 (name extstdlib)
 (modules Extstdlib)
 (libraries camlp-streams)
)

(library
 (public_name "codex.datatype_sig")
 (name datatype_sig)
 (modules Datatype_sig)
 (libraries codex.extstdlib codex.hashing)
)

(library
 (public_name "codex.bdd")
 (name bdd)
 (modules Bdd)
 (libraries codex.hashing)
)

(library
 (public_name "codex.utils.immutable_array")
 (name immutable_array)
 (modules Immutable_array)
)


(library
 (public_name "codex.smallmap")
 (name smallmap)
 (modules Smallmap)
)


(library
 (public_name "codex.treemap")
 (name treemap)
 (modules Treemap)
)

(library
 (public_name "codex.interval_map")
 (name interval_map)
 (modules Interval_map)
 (libraries tracelog codex.hashing)
)

(library
 (public_name "codex.int_builtins")
 (name int_builtins)
 (modules int_builtins)
 (foreign_stubs (language c) (names int_builtins_c))
)

(library
  (name int_builtins_tests)
  (inline_tests
   (libraries qcheck-core))
  (preprocess (pps ppx_inline_test))
  (libraries codex.int_builtins zarith qcheck-core)
  (modules int_builtins_tests)
)


(library
  (public_name codex.file_to_html)
  (name file_to_html)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (libraries base64)
  (modules file_to_html))

(library
 (public_name "codex.record_time")
 (name record_time)
 (modules record_time)
 (foreign_stubs (language c) (names record_time))
)

(library
 (public_name "codex.emit_alarm")
 (name emit_alarm)
 (modules emit_alarm)
 (libraries tracelog operator)
)

(library
 (public_name "codex.online_nearest_common_ancestor_skiplist")
 (name online_nearest_common_ancestor_skiplist)
 (modules online_nearest_common_ancestor_skiplist)
 (libraries codex.int_builtins)
)



(library
 (public_name "codex.condition_map")
 (name condition_map)
 (libraries codex.codex_log codex.smallmap)
 (modules Condition_map)
)

(library
  (public_name codex.hashing)
  (name hashing)
  (modules hashing))

(library
  (public_name codex.hook)
  (name hook)
  (modules hook))

(library
 (name HetHashtbl)
 (public_name codex.het-hashtbl)
 (modules HetHashtbl)
 (libraries patricia-tree))

(library
  (public_name "codex.syntax_tree")
  (name syntax_tree)
  (modules syntax_tree))

(library
 (name stats)
 (public_name codex.stats)
 (modules stats)
 (libraries hook zarith))

(library
 (name units)
 (public_name codex.units)
 (modules units))
