;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;  This file is part of the Codex semantics library.                     ;;
;;                                                                        ;;
;;  Copyright (C) 2013-2025                                               ;;
;;    CEA (Commissariat à l'énergie atomique et aux énergies              ;;
;;         alternatives)                                                  ;;
;;                                                                        ;;
;;  you can redistribute it and/or modify it under the terms of the GNU   ;;
;;  Lesser General Public License as published by the Free Software       ;;
;;  Foundation, version 2.1.                                              ;;
;;                                                                        ;;
;;  It is distributed in the hope that it will be useful,                 ;;
;;  but WITHOUT ANY WARRANTY; without even the implied warranty of        ;;
;;  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         ;;
;;  GNU Lesser General Public License for more details.                   ;;
;;                                                                        ;;
;;  See the GNU Lesser General Public License version 2.1                 ;;
;;  for more details (enclosed in the file LICENSE).                      ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(documentation
 (package codex))

(mdx
  (files chapter*.mld)
  (libraries codex.tracelog zarith)
  (deps (package codex)))

(library
 (name while_ast)
 (public_name "codex.while_ast")
 (modules while_ast))

(library
 (name ppx_while)
 (public_name "codex.ppx_while")
 (kind ppx_rewriter)
 (modules ppx_while)
 (libraries ppxlib ppxlib.astlib)
 (preprocess (pps ppxlib.metaquot)))

(library
 (name whilelib)
  (public_name "codex.whilelib")
 (preprocess (pps ppx_while))
 (libraries
   (re_export while_ast)
   zarith
   codex
   patricia-tree)
 (modules :standard \ while_ast ppx_while while_codex))

(executable
 (name while_codex)
 (public_name while_codex)
 (package codex)
 (modules while_codex)
 (libraries zarith whilelib codex.tracelog))
